Introduced AudioSynthesizer for generating audio using layers of simple sine waves and AudioSynthesisModel for specifying the levels of those waves depending on their frequency relative to the fundamental. InterpolatedAudioSynthesisModel is introduced as an implementation of AudioSynthesisModel which can produce levels that are interpolated from another source and the audio protobuf specification is updated to allow for persistence of this kind of model data. Features of WaveDataProvider and NoteAudioProvider are extracted to new parent interfaces, AudioDataProvider and NoteAudio. Many references to NoteAudioProvider are replaced with NoteAudio, including in NoteAudioSource::getNotes, allowing for synthesised audio to be incorporated in a way that NoteAudioProvider was not suitable for. StatelessSourceNoteAudio is renamed to StatelessSourcePatterNote and a new implementation of StatelessSourceNoteAudio is introduced that implements NoteAudio. KeyboardTuning::getTone is updated to return a Frequency of exactly 1hz when the position is negative and KeyPosition::none is introduced to directly reference this unit-frequency tone. Minor updates in OvertoneSeries. Removed ListNoteSource and deprecated fields in PatternElementFactory. Introduced BufferDetails::createWaveData. Some pattern types are migrated to the pattern module and a new generate module is introduced.